Assigning schedules, assign history fix, performance improvements