@@ -13,6 +13,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.sql.Timestamp;
 import java.time.LocalDate;
 import java.time.LocalTime;
+import java.time.YearMonth;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -40,82 +41,109 @@ public class ScheduledActivityToWSService {
         }
 
         try {
-            assignActivitiesToSchedules(false);
+            assignActivitiesToSchedules(false,null);
         } catch (Exception ex) {
             log.error("Scheduled task failed", ex);
         }
     }
 
     @Transactional
-    public void assignActivitiesToSchedules(boolean fromScheduleImport) {
+    public void assignActivitiesToSchedules(boolean fromScheduleImport, String yearMonth) {
         log.info(">>> Assigning activities to unprocessed schedules");
 
+        if (fromScheduleImport) {
+            processLock=true;
+            YearMonth ym = YearMonth.parse(yearMonth);
+            Timestamp from = Timestamp.valueOf(ym.atDay(1).atStartOfDay());
+            Timestamp to = Timestamp.valueOf(ym.atEndOfMonth().atTime(23, 59, 59));
+
+            int deleted = activityEmployeeRepository.deleteAllByActivityDateRangeAndUserModifiedFalse(from, to);
+            log.info("Deleted {} non-user-modified activity_employee entries from {}", deleted, yearMonth);
+        }
+
         List<Integer> scheduleIds = scheduleRepository.findIdsOfUnprocessedSchedules();
+        log.info("Found {} unprocessed schedules", scheduleIds.size());
         if (scheduleIds.isEmpty()) {
             log.info("No unprocessed schedules found.");
             return;
         }
 
         List<WorkSchedule> schedules = scheduleRepository.findAllById(scheduleIds);
+        log.info("Loaded {} work schedules by ID", schedules.size());
         if (schedules.isEmpty()) {
-            log.info("No unprocessed schedules found.");
+            log.info("No schedules loaded.");
             return;
         }
 
         int totalAssigned = 0;
         for (WorkSchedule ws : schedules) {
             try {
+                log.debug("Processing schedule ID={} | yearMonth={} | day={}", ws.getId(), ws.getYearMonth(), ws.getDayOfMonth());
+
                 LocalDate date = LocalDate.of(
                         Integer.parseInt(ws.getYearMonth().substring(0, 4)),
                         Integer.parseInt(ws.getYearMonth().substring(5, 7)),
                         ws.getDayOfMonth()
                 );
 
-                LocalTime startTime = parseTime(ws.getWorkStartTime());
-                LocalTime endTime = parseTime(ws.getWorkEndTime());
-                if (startTime == null || endTime == null) {
+                LocalTime startTimeRaw = parseTime(ws.getWorkStartTime());
+                LocalTime endTimeRaw = parseTime(ws.getWorkEndTime());
+                if (startTimeRaw == null || endTimeRaw == null) {
                     log.warn("Invalid time for schedule ID={}: {} - {}", ws.getId(), ws.getWorkStartTime(), ws.getWorkEndTime());
                     continue;
                 }
 
-                log.debug("Processing WS ID={} for date {} time range {} - {}",
-                        ws.getId(), date, startTime, endTime);
-
                 Timestamp startOfDay = Timestamp.valueOf(date.atStartOfDay());
                 Timestamp endOfDay = Timestamp.valueOf(date.plusDays(1).atStartOfDay().minusSeconds(1));
 
-                List<ActivityEntity> activities = activityRepository.findActivitiesInDateRange(startOfDay, endOfDay);
+                log.debug("Querying activities for WS ID={} between {} and {}", ws.getId(), startOfDay, endOfDay);
+                List<ActivityEntity> activities = activityRepository.findActivitiesInDateRangeWithProcedure(startOfDay, endOfDay);
+                log.debug("Retrieved {} activities for WS ID={}", activities.size(), ws.getId());
+                if (activities.isEmpty()) continue;
 
-                List<ActivityEntity> matching;
-                if ("F".equals(ws.getWorkMode()) || "B".equals(ws.getWorkMode())) {
-                    matching = activities.stream()
-                            .filter(a -> isWithinRange(a.getActivityTime(), startTime, endTime))
-                            .filter(a -> a.getProcedure() != null && ws.getWorkMode().equals(a.getProcedure().getWorkMode()))
-                            .collect(Collectors.toList());
-                } else {
-                    matching = activities.stream()
-                            .filter(a -> isWithinRange(a.getActivityTime(), startTime, endTime))
-                            .filter(a -> a.getProcedure() != null
-                                    && ws.getWorkMode().equals(a.getProcedure().getWorkMode())
-                                    && a.getRoom() != null
-                                    && ws.getRoomSymbol() != null
-                                    && ws.getRoomSymbol().equalsIgnoreCase(a.getRoom().getRoomCode()))
-                            .collect(Collectors.toList());
-                }
+                List<Integer> activityIds = activities.stream()
+                        .map(ActivityEntity::getActivityId)
+                        .toList();
 
-                log.debug("Found {} matching activities for WS ID={}", matching.size(), ws.getId());
+                Map<Integer, Boolean> manualModifiedMap = activityEmployeeRepository
+                        .findManualModifiedActivityIds(activityIds)
+                        .stream().collect(Collectors.toMap(id -> id, id -> true));
+                log.debug("Manual-modified activities map created for WS ID={}", ws.getId());
 
-                for (ActivityEntity act : matching) {
+                Set<String> existingAssignments = activityEmployeeRepository.findAllExistingActivityEmployeePairs();
+                log.debug("Existing activity-employee pairs fetched");
+
+                List<ActivityEmployeeEntity> toSave = new ArrayList<>();
+
+                for (ActivityEntity act : activities) {
+                    if (act.getActivityTime() == null) continue;
+
+                    LocalTime time = act.getActivityTime().toLocalDateTime().toLocalTime();
+                    if (time.isBefore(startTimeRaw) || time.isAfter(endTimeRaw)) continue;
+
+                    if (!ws.getWorkMode().equals(act.getProcedure().getWorkMode())) continue;
+
+                    if (!"F".equals(ws.getWorkMode()) && !"B".equals(ws.getWorkMode())) {
+                        if (act.getRoom() == null || ws.getRoomSymbol() == null ||
+                                !ws.getRoomSymbol().equalsIgnoreCase(act.getRoom().getRoomCode())) {
+                            continue;
+                        }
+                    }
+
+                    if (manualModifiedMap.getOrDefault(act.getActivityId(), false)) {
+                        log.debug("Skipping activity {} due to user_modified=true", act.getActivityId());
+                        continue;
+                    }
+
                     UserEntity emp = ws.getSubstituteEmployee() != null ? ws.getSubstituteEmployee() : ws.getEmployee();
                     if (emp == null) {
                         log.warn("No employee found for WS ID={}", ws.getId());
                         continue;
                     }
 
-                    // Check if this combination already exists
-                    boolean exists = activityEmployeeRepository.existsByActivityAndEmployee(act.getActivityId(), emp.getId());
-                    if (exists) {
-                        log.debug("Skipping duplicate entry for ACTIVITY ID={} and EMPLOYEE ID={}", act.getActivityId(), emp.getId());
+                    String key = act.getActivityId() + ":" + emp.getId();
+                    if (existingAssignments.contains(key)) {
+                        log.debug("Duplicate assignment skipped: {} -> {}", act.getActivityId(), emp.getId());
                         continue;
                     }
 
@@ -124,24 +152,32 @@ public class ScheduledActivityToWSService {
                     ae.setEmployee(emp);
                     ae.setUserModified(false);
 
-                    activityEmployeeRepository.save(ae);
+                    toSave.add(ae);
+                }
 
-                    log.info("Created ActivityEmployee link: WS ID={} -> ACTIVITY ID={} -> EMPLOYEE ID={}",
-                            ws.getId(), act.getActivityId(), emp.getId());
+                if (!toSave.isEmpty()) {
+                    activityEmployeeRepository.saveAll(toSave);
+                    log.info("Saved {} new activity-employee assignments for WS ID={}", toSave.size(), ws.getId());
+                    totalAssigned += toSave.size();
+                    ws.setProcessed(true);
+                    scheduleRepository.save(ws);
 
-                    totalAssigned++;
+                } else {
+                    log.debug("No new assignments to save for WS ID={}", ws.getId());
                 }
 
                 ws.setProcessed(true);
                 scheduleRepository.save(ws);
+                log.debug("Marked WS ID={} as processed", ws.getId());
 
             } catch (Exception ex) {
-                log.error("Failed to assign schedule ID={} due to error: {}", ws.getId(), ex.getMessage(), ex);
+                log.error("Failed to assign WS ID={} due to: {}", ws.getId(), ex.getMessage(), ex);
             }
         }
-
+        processLock=false;
         log.info("Finished processing schedules. Total assignments created: {}", totalAssigned);
     }
+
 
 
     private LocalTime parseTime(String timeStr) {
